# gnuplot-sample-hs

./: gnuplot-sample.cabal  stack.yaml
.stack-work/install/x86_64-osx/lts-3.13/7.10.2/flag-cache/: HTTP-4000.2.20-4ed6237e324cc4ce05d3713645af2c44  cabal-install-1.22.6.0  data-accessor-0.2.2.6-9ab94c0f695dfce9bec4a1d7f13c7274  data-accessor-transformers-0.2.1.6-949d0295432144c81597b8e19e7bd792  gnuplot-0.5.4-0ee11367d87d22f1785031eab07ac652  gnuplot-sample-0.1.0.0-74999de39e30931819644023718bb378  gnuplot-sample-0.1.0.0-88ba081df78fa8d312142b4f0fb0c2a9  hmatrix-0.16.1.5-5ca0b624714f318fb1cf7b92c40dc166  network-uri-2.6.0.3-a5f987b3a4896895214d8fff79983154  old-locale-1.0.0.7-2f3f4311e12e7847c2af472c26151237  old-time-1.1.0.3-87d81aebf328992ede4a450f399e9481  parsec-3.1.9-bddea73c8bf2d5ff1335dae2cc92e789  storable-complex-0.2.2-8f2416af7a2ee3c9cd620cc714b1aad9  temporary-1.2.0.3-01e00d576953a4beb8526af3af26ac5e  utility-ht-0.0.11-7b9799745c4000f294a96cc0223d24de
.stack-work/install/x86_64-osx/lts-3.13/7.10.2/lib/x86_64-osx-ghc-7.10.2/gnuplot-0.5.4-GABtZyeLkXE3aUgShVWeys/: libHSgnuplot-0.5.4-GABtZyeLkXE3aUgShVWeys-ghc7.10.2.dylib
.stack-work/install/x86_64-osx/lts-3.13/7.10.2/lib/x86_64-osx-ghc-7.10.2/gnuplot-sample-0.1.0.0-8te0n3tHxeXJBGz5R6cSUm/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-osx/lts-3.13/7.10.2/pkgdb/: data-accessor-transformers-0.2.1.6-949d0295432144c81597b8e19e7bd792.conf  gnuplot-0.5.4-0ee11367d87d22f1785031eab07ac652.conf  package.cache  utility-ht-0.0.11-7b9799745c4000f294a96cc0223d24de.conf
src/: Lib.hs  Lib_flymake.hs
(+157 files in other folders)
